fix typo that caused font download to stop working. b=106633 r=yokoyama s=waterson